<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currently_enrolled_therapists"/>
    <ListView
        android:id="@+id/enrolledTherapistList"
        android:layout_width="308dp"
        android:layout_height="242dp"
        android:layout_marginVertical="40dp"
        android:background="#AEADAD"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/findTherapistByEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/requestTherapistButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_patient_request_to_therapist" />





</LinearLayout>