<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text=""
        android:id="@+id/newMailDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:text=""
        android:id="@+id/newMailTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Spinner
        android:entries="@array/mailType"
        android:id="@+id/newMailType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText

        android:hint="@string/message_subject"
        android:id="@+id/newMailSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="text"
        android:importantForAutofill="no" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newMailBody"
        android:hint="Message Body"
        android:inputType="textMultiLine"
        android:lines="10"
        android:minLines="10"
        android:gravity="top|left"
        android:maxLines="10"
        android:scrollbars="vertical"
        tools:ignore="HardcodedText,RtlHardcoded"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        />
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        />
</LinearLayout>