<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text=""
        android:id="@+id/rspMailDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text=""
        android:id="@+id/rspMailTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:entries="@array/mailType"
        android:id="@+id/rspMailType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText

        android:hint="@string/message_subject"
        android:id="@+id/rspMailSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Subject"
        android:inputType="text" />
    <EditText

        android:id="@+id/rspMailBody"

        android:hint="@string/message_body"
        android:inputType="textMultiLine"
        android:lines="10"
        android:minLines="10"
        android:gravity="top|left"
        android:maxLines="10"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:importantForAutofill="no"
        tools:ignore="RtlHardcoded" />
    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        />
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/replying_to"
        />
    <TextView
        android:text=""

        android:id="@+id/mailDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text=""

        android:id="@+id/mailFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text=""

        android:id="@+id/mailType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text=""

        android:id="@+id/mailSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mailBody"

        android:text=""
        />



</LinearLayout>