<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.feelings_diary.MainActivity">

    <ImageView
        android:layout_width="212dp"
        android:layout_height="275dp"
        android:id="@+id/login_icon"
        android:src="@drawable/feelings_diary_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop = "80dp"
        android:contentDescription="@string/login_icon" />

    <TextView
        android:layout_height = "wrap_content"
        android:layout_width = "wrap_content"

        android:id="@+id/login_appName"
        android:text="@string/title_app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/login_icon"
        app:layout_constraintBottom_toTopOf="@id/register"
        app:layout_constraintStart_toStartOf="@id/login_icon"
        app:layout_constraintEnd_toEndOf="@id/login_icon"
        android:layout_marginTop = "10dp"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="@id/login_icon"
        app:layout_constraintEnd_toEndOf="@id/login_icon"
        app:layout_constraintTop_toBottomOf="@id/login_appName"
        android:layout_marginTop = "20dp"
        />
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@id/login_icon"
        app:layout_constraintEnd_toEndOf="@id/login_icon"
        app:layout_constraintTop_toBottomOf="@id/register"
        android:layout_marginTop="10dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>