<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <SeekBar
        android:id="@+id/patientFeelingsSeekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:min="0"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@id/patentCheckInComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/patientFeelingsImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patientFeelingsImage"
        app:layout_constraintBottom_toTopOf="@id/patientFeelingsSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/today_i_am_feeling"
        />

    <ImageView
        android:id="@+id/patientFeelingsImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/patientFeelingsSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/slightly_smiling_emoji"
        android:contentDescription="@string/feelings_illustration" />

    <EditText
        android:id="@+id/patentCheckInComment"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/add_a_comment_to_this_check_in"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientFeelingsSeekBar"
        app:layout_constraintVertical_bias="0.333
" />
    <Button
        android:id="@+id/completeCheckinButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/patentCheckInComment"
        app:layout_constraintEnd_toStartOf="@id/cancelCheckinButton"
        app:layout_constraintTop_toBottomOf="@id/patentCheckInComment"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save_check_in"

        />

    <Button
        android:id="@+id/cancelCheckinButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patentCheckInComment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/completeCheckinButton"
        app:layout_constraintEnd_toEndOf="@id/patentCheckInComment"
        android:text="@string/cancel_check_in"/>





</androidx.constraintlayout.widget.ConstraintLayout>